--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^9.4.0",
     "cron-parser": "^4.5.0",
     "dotenv": "^16.0.1",
+    "node-sp-auth": "^3.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
