--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "dotenv": "^16.0.1",
     "https-proxy-agent": "^5.0.1",
     "ix": "^4.5.2",
+    "moment": "^2.29.4",
     "node-sp-auth": "^3.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
