--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharepoint-excel-extraction",
-	"version": "1.10.0",
+	"version": "1.11.0",
 	"description": "",
 	"author": "",
 	"private": false,
@@ -27,6 +27,7 @@
 		"@nestjs/core": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
 		"axios": "^0.27.2",
+		"axios-ntlm": "^1.4.1",
 		"cache-manager": "^4.1.0",
 		"commander": "^9.4.0",
 		"cron-parser": "^4.5.0",
