--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharepoint-excel-extraction",
-	"version": "1.11.0",
+	"version": "1.12.0",
 	"description": "",
 	"author": "",
 	"private": false,
@@ -32,6 +32,7 @@
 		"commander": "^9.4.0",
 		"cron-parser": "^4.5.0",
 		"dotenv": "^16.0.1",
+		"fast-glob": "^3.3.1",
 		"https-proxy-agent": "^5.0.1",
 		"ix": "^4.5.2",
 		"moment": "^2.29.4",
