--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharepoint-excel-extraction",
-	"version": "1.12.0",
+	"version": "1.13.0",
 	"description": "",
 	"author": "",
 	"private": false,
@@ -21,50 +21,51 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@google-cloud/bigquery": "^6.0.1",
-		"@nestjs/axios": "^0.1.0",
-		"@nestjs/common": "^8.0.0",
-		"@nestjs/core": "^8.0.0",
-		"@nestjs/platform-express": "^8.0.0",
-		"axios": "^0.27.2",
+		"@google-cloud/bigquery": "^7.2.0",
+		"@nestjs/axios": "^3.0.0",
+		"@nestjs/cache-manager": "^2.1.0",
+		"@nestjs/common": "^10.2.1",
+		"@nestjs/core": "^10.2.1",
+		"@nestjs/platform-express": "^10.2.1",
+		"axios": "^1.4.0",
 		"axios-ntlm": "^1.4.1",
-		"cache-manager": "^4.1.0",
-		"commander": "^9.4.0",
-		"cron-parser": "^4.5.0",
-		"dotenv": "^16.0.1",
+		"cache-manager": "^5.2.3",
+		"commander": "^11.0.0",
+		"cron-parser": "^4.9.0",
+		"dotenv": "^16.3.1",
 		"fast-glob": "^3.3.1",
-		"https-proxy-agent": "^5.0.1",
-		"ix": "^4.5.2",
+		"https-proxy-agent": "^7.0.1",
+		"ix": "^5.0.0",
 		"moment": "^2.29.4",
-		"node-sp-auth": "^3.0.5",
+		"node-sp-auth": "^3.0.7",
 		"reflect-metadata": "^0.1.13",
-		"rimraf": "^3.0.2",
-		"rxjs": "^7.2.0",
-		"xlsx": "^0.18.5"
+		"rimraf": "^5.0.1",
+		"rxjs": "^7.8.1",
+		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^8.0.0",
-		"@nestjs/schematics": "^8.0.0",
-		"@nestjs/testing": "^8.0.0",
-		"@types/cache-manager": "^4.0.1",
-		"@types/express": "^4.17.13",
-		"@types/jest": "27.5.0",
-		"@types/node": "^16.0.0",
-		"@types/supertest": "^2.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"eslint": "^8.0.1",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"jest": "28.0.3",
-		"prettier": "^2.3.2",
-		"source-map-support": "^0.5.20",
-		"supertest": "^6.1.3",
-		"ts-jest": "28.0.1",
-		"ts-loader": "^9.2.3",
-		"ts-node": "^10.0.0",
-		"tsconfig-paths": "4.0.0",
-		"typescript": "^4.3.5"
+		"@nestjs/cli": "^10.1.15",
+		"@nestjs/schematics": "^10.0.2",
+		"@nestjs/testing": "^10.2.1",
+		"@types/cache-manager": "^4.0.2",
+		"@types/express": "^4.17.17",
+		"@types/jest": "29.5.4",
+		"@types/node": "^20.5.5",
+		"@types/supertest": "^2.0.12",
+		"@typescript-eslint/eslint-plugin": "^6.4.1",
+		"@typescript-eslint/parser": "^6.4.1",
+		"eslint": "^8.47.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"jest": "29.6.4",
+		"prettier": "^3.0.2",
+		"source-map-support": "^0.5.21",
+		"supertest": "^6.3.3",
+		"ts-jest": "29.1.1",
+		"ts-loader": "^9.4.4",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "4.2.0",
+		"typescript": "^5.2.2"
 	},
 	"jest": {
 		"moduleFileExtensions": [
