--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
             "sourceMaps": true,
             //"envFile": "${workspaceFolder}/.env",
             "cwd": "${workspaceRoot}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "preLaunchTask": "generate-schema"
         }
     ]
 }
