--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"private": false,
 	"license": "MIT",
 	"scripts": {
-		"prebuild": "rimraf dist",
+		"generate-schema": "npx ts-json-schema-generator --path src/configuration/interfaces/IJSONConfig.ts -o src/schemas/config.schema.json",
+		"prebuild": "rimraf dist && npm run generate-schema",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
@@ -21,48 +22,49 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@google-cloud/bigquery": "^7.2.0",
+		"@google-cloud/bigquery": "^7.3.0",
 		"@nestjs/axios": "^3.0.0",
 		"@nestjs/cache-manager": "^2.1.0",
-		"@nestjs/common": "^10.2.4",
-		"@nestjs/core": "^10.2.4",
-		"@nestjs/platform-express": "^10.2.4",
-		"axios": "^1.5.0",
+		"@nestjs/common": "^10.2.7",
+		"@nestjs/core": "^10.2.7",
+		"@nestjs/platform-express": "^10.2.7",
+		"axios": "^1.5.1",
 		"axios-ntlm": "^1.4.1",
-		"cache-manager": "^5.2.3",
+		"cache-manager": "^5.2.4",
 		"commander": "^11.0.0",
 		"cron-parser": "^4.9.0",
 		"dotenv": "^16.3.1",
 		"fast-glob": "^3.3.1",
-		"https-proxy-agent": "^7.0.1",
+		"https-proxy-agent": "^7.0.2",
 		"ix": "^5.0.0",
 		"moment": "^2.29.4",
 		"node-sp-auth": "^3.0.7",
 		"reflect-metadata": "^0.1.13",
-		"rimraf": "^5.0.1",
+		"rimraf": "^5.0.5",
 		"rxjs": "^7.8.1",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^10.1.17",
+		"@nestjs/cli": "^10.1.18",
 		"@nestjs/schematics": "^10.0.2",
-		"@nestjs/testing": "^10.2.4",
-		"@types/cache-manager": "^4.0.2",
-		"@types/express": "^4.17.17",
-		"@types/jest": "29.5.4",
-		"@types/node": "^20.5.7",
-		"@types/supertest": "^2.0.12",
-		"@typescript-eslint/eslint-plugin": "^6.5.0",
-		"@typescript-eslint/parser": "^6.5.0",
-		"eslint": "^8.48.0",
+		"@nestjs/testing": "^10.2.7",
+		"@types/cache-manager": "^4.0.3",
+		"@types/express": "^4.17.19",
+		"@types/jest": "29.5.5",
+		"@types/node": "^20.8.4",
+		"@types/supertest": "^2.0.14",
+		"@typescript-eslint/eslint-plugin": "^6.7.5",
+		"@typescript-eslint/parser": "^6.7.5",
+		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.0.0",
-		"jest": "29.6.4",
+		"eslint-plugin-prettier": "^5.0.1",
+		"jest": "29.7.0",
 		"prettier": "^3.0.3",
 		"source-map-support": "^0.5.21",
 		"supertest": "^6.3.3",
 		"ts-jest": "29.1.1",
-		"ts-loader": "^9.4.4",
+		"ts-json-schema-generator": "^1.3.0",
+		"ts-loader": "^9.5.0",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "4.2.0",
 		"typescript": "^5.2.2"
