--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
 	"parser": "typescript",
 	"bracketSpacing": true,
 	"arrowParens": "avoid",
-	"printWidth": 100
+	"printWidth": 100,
+	"endOfLine": "crlf"
 }
