--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharepoint-excel-extraction",
-	"version": "1.17.0",
+	"version": "1.17.1",
 	"description": "",
 	"author": "",
 	"private": false,
@@ -21,50 +21,51 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@google-cloud/bigquery": "^7.9.1",
-		"@nestjs/axios": "^3.1.1",
-		"@nestjs/common": "^10.4.6",
-		"@nestjs/core": "^10.4.6",
-		"@nestjs/platform-express": "^10.4.6",
-		"axios": "^1.7.7",
-		"axios-ntlm": "^1.4.2",
-		"cache-manager": "^6.1.2",
-		"commander": "^12.1.0",
-		"cron-parser": "^4.9.0",
-		"dotenv": "^16.4.5",
-		"fast-glob": "^3.3.2",
-		"https-proxy-agent": "^7.0.5",
+		"@google-cloud/bigquery": "^8.1.1",
+		"@nestjs/axios": "^4.0.1",
+		"@nestjs/cache-manager": "^3.0.1",
+		"@nestjs/common": "^11.1.9",
+		"@nestjs/core": "^11.1.9",
+		"@nestjs/platform-express": "^11.1.9",
+		"axios": "^1.13.2",
+		"axios-ntlm": "^1.4.6",
+		"cache-manager": "^7.2.5",
+		"commander": "^14.0.2",
+		"cron-parser": "^5.4.0",
+		"dotenv": "^17.2.3",
+		"fast-glob": "^3.3.3",
+		"https-proxy-agent": "^7.0.6",
 		"ix": "^7.0.0",
 		"moment": "^2.30.1",
-		"node-sp-auth": "^3.0.8",
+		"puppeteer": "^24.30.0",
 		"reflect-metadata": "^0.2.2",
-		"rimraf": "^6.0.1",
-		"rxjs": "^7.8.1",
+		"rimraf": "^6.1.1",
+		"rxjs": "^7.8.2",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^10.4.5",
-		"@nestjs/schematics": "^10.2.3",
-		"@nestjs/testing": "^10.4.6",
-		"@types/cache-manager": "^4.0.6",
-		"@types/express": "^5.0.0",
-		"@types/jest": "29.5.14",
-		"@types/node": "^22.8.4",
-		"@types/supertest": "^6.0.2",
-		"@typescript-eslint/eslint-plugin": "^8.12.2",
-		"@typescript-eslint/parser": "^8.12.2",
-		"eslint": "^9.13.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.2.1",
-		"jest": "29.7.0",
-		"prettier": "^3.3.3",
+		"@nestjs/cli": "^11.0.12",
+		"@nestjs/schematics": "^11.0.9",
+		"@nestjs/testing": "^11.1.9",
+		"@types/cache-manager": "^5.0.0",
+		"@types/express": "^5.0.5",
+		"@types/jest": "30.0.0",
+		"@types/node": "^24.10.1",
+		"@types/supertest": "^6.0.3",
+		"@typescript-eslint/eslint-plugin": "^8.47.0",
+		"@typescript-eslint/parser": "^8.47.0",
+		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.4",
+		"jest": "30.2.0",
+		"prettier": "^3.6.2",
 		"source-map-support": "^0.5.21",
-		"supertest": "^7.0.0",
-		"ts-jest": "29.2.5",
-		"ts-loader": "^9.5.1",
+		"supertest": "^7.1.4",
+		"ts-jest": "29.4.5",
+		"ts-loader": "^9.5.4",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "4.2.0",
-		"typescript": "^5.6.3"
+		"typescript": "^5.9.3"
 	},
 	"jest": {
 		"moduleFileExtensions": [
