--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharepoint-excel-extraction",
-	"version": "1.19.2",
+	"version": "1.20.0",
 	"description": "",
 	"author": "",
 	"private": false,
@@ -26,6 +26,7 @@
 		"@nestjs/cache-manager": "^3.0.1",
 		"@nestjs/common": "^11.1.9",
 		"@nestjs/core": "^11.1.9",
+		"@nestjs/microservices": "^11.1.9",
 		"@nestjs/platform-express": "^11.1.9",
 		"axios": "^1.13.2",
 		"axios-ntlm": "^1.4.6",
@@ -37,31 +38,31 @@
 		"https-proxy-agent": "^7.0.6",
 		"ix": "^7.0.0",
 		"moment": "^2.30.1",
-		"puppeteer": "^24.31.0",
+		"puppeteer": "^24.32.0",
 		"reflect-metadata": "^0.2.2",
 		"rimraf": "^6.1.2",
 		"rxjs": "^7.8.2",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^11.0.12",
+		"@nestjs/cli": "^11.0.14",
 		"@nestjs/schematics": "^11.0.9",
 		"@nestjs/testing": "^11.1.9",
 		"@types/cache-manager": "^5.0.0",
-		"@types/express": "^5.0.5",
+		"@types/express": "^5.0.6",
 		"@types/jest": "30.0.0",
 		"@types/node": "^24.10.1",
 		"@types/supertest": "^6.0.3",
-		"@typescript-eslint/eslint-plugin": "^8.48.0",
-		"@typescript-eslint/parser": "^8.48.0",
+		"@typescript-eslint/eslint-plugin": "^8.48.1",
+		"@typescript-eslint/parser": "^8.48.1",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
 		"jest": "30.2.0",
-		"prettier": "^3.6.2",
+		"prettier": "^3.7.4",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.1.4",
-		"ts-jest": "29.4.5",
+		"ts-jest": "29.4.6",
 		"ts-loader": "^9.5.4",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "4.2.0",
